Bug/2354 - fixed choices section (collection editor) design issues (#2376)
* Work for #2323 - fixed titles too far

* Work for #2323 - fixed icons

* Resolved #2323 - The "Clear" button should be hidden if nothing is entered

* Added missing import

* Work for #2323 - fixed button states & styles

* Resolved #2354 - fixed icons and button styles

* Resolved #2354 - fixed collection editor clear button visibility

* Resolved #2354 - fixed missing gridlines - wrong collection editor table rows border

* Resolved #2354 - fixed collection editor fast entry icon

* Work for #2354 - fixed styles for react

* Work for #2354 - fixed table cell spacings

* Work for #2354 - unified all collection property editor (matrix) settings

* Work for #2354 - implemented placehoilder for text/title column in collection editor

* Work for #2354 - added s-tests for pg choices section

* Work for #2354 - fixed linter

* Work for #2354 - fixed s-tests

* Work for #2354 - fixed s-tests - added mask

* Work for #2354 - fixed s-tests - added mask

* Work for #2354 - fixed s-tests - added mask

* Work for #2354 - fixed s-tests - added mask

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-table.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-table.scss
@@ -3,19 +3,18 @@
   background-color: $background;
   border: 1px solid $border;
   border-collapse: collapse;
-}
-.spg-table tr:not(:last-child) {
-  box-shadow: 0px 1px 0px $border;
+  tr {
+    border-bottom: 1px solid $border;
+  }
 }
 .spg-table__cell {
-  padding: calcSize(0.5) 0;
+  padding: 0;
   .spg-checkbox {
     margin: 0 calcSize(2);
   }
 }
 
 .spg-table__cell--detail-panel {
-  padding: 0;
   .spg-panel__content {
     box-shadow: none;
   }
@@ -27,9 +26,13 @@
   font-size: calcSize(2);
   border: none;
   background-color: transparent;
+  padding: calcSize(1.5) 0;
+  padding-right: calcSize(2);
+}
+.spg-table__cell:not(.spg-table__cell--detail-panel):first-of-type .spg-text {
+  padding-left: calcSize(2);
 }
 .spg-table__cell--actions .sv-action-bar {
-  padding: 0;
   opacity: 0.5;
 }
 .spg-table__cell--actions:first-child {
